--- a/home.html
+++ b/home.html
@@ -438,7 +438,7 @@
         </div>
         <div id="btns">
             <button>Home</button>
-            <button>Programs</button>
+            <a href="./Programs.html"><button>Programs</button></a>
             <button>Impact</button>
             <button>About</button>
             <button>Contact</button>
@@ -454,7 +454,7 @@
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <div class="overlay-content">
                   <a href="#">Home</a>
-                  <a href="#">Programs</a>
+                  <a href="./Programs.html">Programs</a>
                   <a href="#">Impact</a>
                   <a href="#">About</a>
                   <a href="#">Contact</a>
