--- a/Programs.html
+++ b/Programs.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
+
+    <style>
+        @media only screen and (min-width: 0px) and (max-width: 820px){
+            #img5div{
+                margin-left: 350px;
+            }
+            .img33{
+                height: 400px;
+            }
+        }
+    </style>
 </head>
 <body>
     <h1 id="pgm">Programs</h1>
