--- a/home.html
+++ b/home.html
@@ -131,7 +131,7 @@
         #programs #img5{
             width: 80%;
         }
-        #img5div{
+        #img5divv{
             margin-left: 2%;
             margin-top: 2%;
             width: 32%;
@@ -417,8 +417,9 @@
         #bfg div:hover{
             box-shadow: rgba(0, 0, 0, 0.24) 0px 1px 8px;
         }
-        #img5div:hover{
+        #img5divv:hover{
             box-shadow: rgba(0, 0, 0, 0.24) 0px 1px 8px;
+            cursor: pointer;
         }
 
 
@@ -527,7 +528,7 @@
                 <p>Sports for girls envisions providing opportunities to 2000 girls play <br> a sport of their choice</p>
             </div>
         </div>
-        <div id="img5div">
+        <div id="img5divv">
             <img id="img5" src="https://uploads-ssl.webflow.com/61bd9768ab9f2724adfaa5c2/61bdb5bcea186db0b215bcca_JTSS%20-%202x.png" alt="">
             <h2>Joining the Sapta Swaras</h2>
             <p>Joining the Sapta swaras is a free carnatic music learning program. <br> Currently the focus is on carnatic vocals, violin, flute and <br> bharatanatyam.</p>
