--- a/home.html
+++ b/home.html
@@ -421,6 +421,11 @@
             box-shadow: rgba(0, 0, 0, 0.24) 0px 1px 8px;
             cursor: pointer;
         }
+        body{
+            font-family: 'Montserrat', sans-serif;
+
+
+        }
 
 
 
